@@ -1,8 +1,8 @@
 Package: Rblpapi.utils
 Type: Package
-Title: Utilities that Rely on the Rblpapi Package
+Title: Utilities that Build on the Rblpapi Package
 Version: 0.0-1
-Date: 2018-10-11
+Date: 2019-02-05
 Maintainer: Enrico Schumann <es@enricoschumann.net>
 Authors@R: person(given = "Enrico", family = "Schumann", 
                   role  = c("aut", "cre"),
@@ -12,3 +12,4 @@ Description: Functions for specific data retrievals,
     relying on the functionality provided by the Rblpapi package.
 License: GPL-3
 Depends: Rblpapi, PMwR
+Imports: zoo, fastmatch
